<resources>
    <string name="app_name">Bon</string>
    <string name="action_settings">Settings</string>
    <string name="username">Enter Username</string>
    <string name="login">Login Page</string>
    <string name="pass">Enter Password</string>
    <string name="log">Login</string>
    <string name="email">Enter email ID</string>
    <string name="age">Enter your age</string>
    <string name="details">Enter your Details:</string>
    <string name="name">Enter your name</string>
    <string name="add">Enter Address</string>
    <string name="register">Register</string>
    <string name="phone">Enter phone number</string>
    <string name="nyr">Not yet Registered?</string>
    <string name="submit">Submit</string>
    <string name="gen">Select Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tas">title_activity_second</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title">Bon \nVoyage</string>
    <string name="title_activity_register_new">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_content_dashboard">content_dashboard</string>
    <string name="title_activity_activity_newyork">activity_newyork</string>
</resources>
