<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/b"
    >

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:height="50dp"
        android:textSize="35sp"
        android:text="@string/login"
        android:textColor="#000000"
        android:gravity="center_vertical|center_horizontal"
        />

    <EditText
        android:id="@+id/enter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:inputType="textPersonName"
        android:layout_below="@id/text1"
        android:width="300dp"
        android:height="50dp"
        android:textSize="25sp"
        android:hint="@string/username"
        android:gravity="center_vertical|center_horizontal" />

    <EditText
        android:id="@+id/enter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_below="@id/enter1"
        android:width="300dp"
        android:height="50dp"
        android:textSize="25sp"
        android:hint="@string/pass"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enter2"
        android:text="@string/log"
        android:width="300dp"
        android:height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="#ff0004"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/regi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nyr"
        android:textSize="20sp"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:layout_below="@id/btn"
        android:height="50dp"
        android:gravity="top"
        android:textColor="#3a58d0" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/regi"
        android:layout_below="@id/btn"
        android:layout_marginLeft="30dp"
        android:text="@string/register"
        android:height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="#fb6824" />

</RelativeLayout>
